# codewash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_RELEASE_CHECKLIST.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: patterns.md
src/codewash/: __init__.py  __main__.py  cli.py  config.py  detector.py  models.py  patterns.py  replacer.py  scanner.py
tests/: conftest.py  test_config.py  test_replacer.py  test_scanner.py
tests/testdata/: .codewash.yaml
tests/testdata/k8s/: deployment.yaml
